--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
+    "redis": "^2.8.0",
     "serve-favicon": "^2.4.3",
     "tracer": "^0.8.9"
   },
