--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -12,9 +13,10 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
     "redis": "^2.8.0",
     "serve-favicon": "^2.4.3",
-    "tracer": "^0.8.9"
+    "tracer": "^0.8.11"
   },
   "description": "TaNaData",
   "main": "server.js",
@@ -23,7 +25,7 @@
     "url": "git+https://github.com/Wellbeing0506/TaNaData.git"
   },
   "keywords": [
-    "opensfhit"
+    "opensfhit","nodejs","zhigongnet","redis","idustry"
   ],
   "author": "Dave",
   "license": "ISC",
