add pm2 service in this Project

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "dev": "NODE_ENV=development node server.js"
+    "start": "node_modules/pm2/bin/pm2 start ecosystem.config.js --env production",
+    "dev": "node_modules/pm2/bin/pm2 start ecosystem.config.js --env development"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -14,6 +14,7 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
+    "pm2": "^2.7.1",
     "redis": "^2.8.0",
     "serve-favicon": "^2.4.3",
     "tracer": "^0.8.11"
@@ -25,7 +26,11 @@
     "url": "git+https://github.com/Wellbeing0506/TaNaData.git"
   },
   "keywords": [
-    "opensfhit","nodejs","zhigongnet","redis","idustry"
+    "opensfhit",
+    "nodejs",
+    "zhigongnet",
+    "redis",
+    "idustry"
   ],
   "author": "Dave",
   "license": "ISC",
