--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "redis": "^2.8.0",
+    "request": "^2.83.0",
     "serve-favicon": "^2.4.3",
     "tracer": "^0.8.11"
   },
