--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cheerio": "^1.0.0-rc.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-session": "^1.15.6",
+    "helmet": "^3.8.2",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
     "serve-favicon": "^2.4.3",
